<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.StandartFragment">

    <EditText
        android:id="@+id/standard_name_of_org"
        android:hint="@string/name_of_org"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/standard_year_publish"
        android:hint="@string/year_publish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/standard_name"
        android:hint="@string/name_of_work"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/standard_code_letter"
        android:hint="@string/code_letter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/standard_code_number"
        android:hint="@string/code_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/standard_publish"
        android:hint="@string/publish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/standart_place_publish"
        android:hint="@string/place_publish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <Button
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>
</ScrollView>