<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.PatentsFragment">

    <EditText
        android:id="@+id/patent_authors"
        android:hint="@string/authors"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/patent_name_owner"
        android:hint="@string/name_patent_owner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/patent_name"
        android:hint="@string/name_of_work"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/patent_country"
        android:hint="@string/country"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/patent_number"
        android:hint="@string/number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/patent_date"
        android:hint="@string/date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <Button
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>
</ScrollView>