<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.CatalogFragment">

    <EditText
        android:id="@+id/catalog_authors"
        android:hint="@string/authors"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/catalog_name"
        android:hint="@string/name_of_work"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/catalog_place"
        android:hint="@string/place"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/standard_year"
        android:hint="@string/year"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/standard_sheet"
        android:hint="@string/sheets"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <Button
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
</LinearLayout>
</ScrollView>