<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="existingUser"
            type="com.kpi.scineticle.viewmodel.subsystemUser.existingUser.ExistingUserViewModel" />
    </data>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.LoginUserActivity">
    <EditText
        android:id="@+id/edit_text_login"
        android:text="@={existingUser.email}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/edit_text_password"
        android:text="@={existingUser.password}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordUser"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterToAccount"
        />

</LinearLayout>
</layout>